--- a/CardGame/Base.lproj/Main.storyboard
+++ b/CardGame/Base.lproj/Main.storyboard
@@ -17,16 +17,36 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Ww-O6-Pyh">
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Ww-O6-Pyh">
                                 <rect key="frame" x="143" y="79" width="314" height="441"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <state key="normal" title="Button" backgroundImage="cardback">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="cardClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lhl-DI-5K0"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dcm-Kq-myl">
+                                <rect key="frame" x="143" y="28" width="314" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="4Ww-O6-Pyh" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="JAB-Q7-qJk"/>
+                            <constraint firstItem="Dcm-Kq-myl" firstAttribute="width" secondItem="4Ww-O6-Pyh" secondAttribute="width" id="RaM-B2-5G1"/>
+                            <constraint firstItem="Dcm-Kq-myl" firstAttribute="leading" secondItem="4Ww-O6-Pyh" secondAttribute="leading" id="Rys-vs-JeI"/>
+                            <constraint firstItem="4Ww-O6-Pyh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="daU-qB-ynx"/>
+                            <constraint firstItem="4Ww-O6-Pyh" firstAttribute="top" secondItem="Dcm-Kq-myl" secondAttribute="bottom" constant="30" id="rgk-1H-no5"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="cardButton" destination="4Ww-O6-Pyh" id="hqu-m3-2I5"/>
+                        <outlet property="cardLabel" destination="Dcm-Kq-myl" id="nfH-tr-Ddj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
